@@ -16,4 +16,4 @@ loops: 3        thresholds: 1
 3.590000e+01 1.155986e+02 5.889019e+02 5.889438e+02 5.947140e+02
 4.060000e+01 1.151987e+02 5.605109e+02 5.605384e+02 5.666776e+02
 4.530000e+01 [ stau tachyon ]
-5.000000e+01 [ stau tachyon ]
+5.000000e+01 [ stau tachyon stau is tree-level tachyon at MZ ]
